[project]
name = "flypower-tool"
version = "0.0.4"
description = "Dify tools plugin for Flypower image generation and agent task control."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aliyun-log-python-sdk>=0.9.48",
    "dify_plugin>=0.9.0",
    "openai>=2.38.0",
    "pyyaml>=6.0.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
